feat: add documentation for employee position controller
