# storage/api-docs/api-docs.json
@@ -1041,6 +1041,305 @@
                 ]
             }
         },
+        "/api/v1/employee-positions": {
+            "get": {
+                "tags": [
+                    "EmployeePosition"
+                ],
+                "summary": "Display a listing of the employee positions resource",
+                "operationId": "2ecb3077b5f340359740d14e1842a18c",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "$ref": "#/components/schemas/EmployeePosition"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum ": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/employees-positions": {
+            "post": {
+                "tags": [
+                    "EmployeePosition"
+                ],
+                "summary": "Store a newly created resource in employee position storage",
+                "operationId": "f3430cc1fd0569209b005fa9ed4bb77e",
+                "parameters": [
+                    {
+                        "name": "position_code",
+                        "in": "query",
+                        "description": "Position code property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "STF"
+                        }
+                    },
+                    {
+                        "name": "position",
+                        "in": "query",
+                        "description": "Position property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "STF"
+                        }
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "description": "description property",
+                        "schema": {
+                            "type": "string",
+                            "example": "This position is awesome"
+                        }
+                    },
+                    {
+                        "name": "sorting_number",
+                        "in": "query",
+                        "description": "sorting number  property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "1000"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Employee Position created successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/EmployeePosition"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum ": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/employees-positions/{id}": {
+            "get": {
+                "tags": [
+                    "EmployeePosition"
+                ],
+                "summary": "Display the specified employee position resource.",
+                "operationId": "d05b80af7402ac14bf2ee6b8fb34cdb5",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id the employee position table",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/EmployeePosition"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum ": []
+                    }
+                ]
+            },
+            "put": {
+                "tags": [
+                    "EmployeePosition"
+                ],
+                "summary": "Update the specified resource in employee position storage.",
+                "operationId": "3b9c4430e5e16877b8266d0a3b435263",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id the employee position table",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "position_code",
+                        "in": "query",
+                        "description": "Position code property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "STF"
+                        }
+                    },
+                    {
+                        "name": "position",
+                        "in": "query",
+                        "description": "Position property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "STF"
+                        }
+                    },
+                    {
+                        "name": "description",
+                        "in": "query",
+                        "description": "description property",
+                        "schema": {
+                            "type": "string",
+                            "example": "This position is awesome"
+                        }
+                    },
+                    {
+                        "name": "sorting_number",
+                        "in": "query",
+                        "description": "sorting number  property",
+                        "required": true,
+                        "schema": {
+                            "type": "string",
+                            "example": "1000"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Employee position updated successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/EmployeePosition"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum ": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "EmployeePosition"
+                ],
+                "summary": "Remove the specified resource from employee position storage.",
+                "operationId": "2642436104bab72c1544b87ed62b0a77",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "id the employee position table",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Employee position deleted successfully"
+                                        },
+                                        "data": {
+                                            "$ref": "#/components/schemas/EmployeePosition"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "404": {
+                        "description": "Not Found"
+                    }
+                },
+                "security": [
+                    {
+                        "sanctum ": []
+                    }
+                ]
+            }
+        },
         "/api/v1/permissions?page=1&per_page=50&search=search": {
             "get": {
                 "tags": [
